fix(Head Label): Prevented text overflow

--- a/src/styles/atoms/_pa_head-label.scss
+++ b/src/styles/atoms/_pa_head-label.scss
@@ -29,6 +29,7 @@
   //--------------------------| Text
 
   > .text {
+    @include ellipsis();
     @include user-select(none);
 
     display: block;
